First draft, mostly duplicated code from Connector, compiling
